--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Tensors WebOps",
   "dependencies": {
+    "@fontsource/nunito": "^4.5.0",
     "@fontsource/open-sans": "^4.5.2",
     "@fontsource/raleway": "^4.5.0",
     "@fontsource/roboto": "^4.5.1",
