--- a/package.json
+++ b/package.json
@@ -56,10 +56,11 @@
   "keywords": [
     "gatsby"
   ],
-  "scripts": {
-    "dev": "gatsby develop",
-    "build": "gatsby build",
-    "serve": "gatsby serve",
-    "deploy": "gatsby build --prefix-paths && gh-pages -d public"
-  }
+"scripts": {
+  "dev": "set NODE_OPTIONS=--openssl-legacy-provider && gatsby develop",
+  "build": "set NODE_OPTIONS=--openssl-legacy-provider && gatsby build",
+  "serve": "gatsby serve",
+  "deploy": "gatsby build --prefix-paths && gh-pages -d public"
+}
+
 }
