--- a/package.json
+++ b/package.json
@@ -57,10 +57,11 @@
     "gatsby"
   ],
 "scripts": {
-  "dev": "set NODE_OPTIONS=--openssl-legacy-provider && gatsby develop",
-  "build": "set NODE_OPTIONS=--openssl-legacy-provider && gatsby build",
+  "dev": "NODE_OPTIONS=--openssl-legacy-provider gatsby develop",
+  "build": "NODE_OPTIONS=--openssl-legacy-provider gatsby build",
   "serve": "gatsby serve",
   "deploy": "gatsby build --prefix-paths && gh-pages -d public"
 }
+
 
 }
