--- a/package.json
+++ b/package.json
@@ -50,18 +50,17 @@
     "theme-ui": "^0.3.1"
   },
   "devDependencies": {
+    "cross-env": "^10.1.0",
     "gh-pages": "^3.2.3",
     "prettier": "^2.1.2"
   },
   "keywords": [
     "gatsby"
   ],
-"scripts": {
-  "dev": "NODE_OPTIONS=--openssl-legacy-provider gatsby develop",
-  "build": "NODE_OPTIONS=--openssl-legacy-provider gatsby build",
-  "serve": "gatsby serve",
-  "deploy": "gatsby build --prefix-paths && gh-pages -d public"
-}
-
-
+  "scripts": {
+    "dev": "cross-env NODE_OPTIONS=--openssl-legacy-provider gatsby develop",
+    "build": "cross-env NODE_OPTIONS=--openssl-legacy-provider gatsby build",
+    "serve": "gatsby serve",
+    "deploy": "cross-env NODE_OPTIONS=--openssl-legacy-provider gatsby build --prefix-paths && gh-pages -d public"
+  }
 }
